# cursor-chat-export

./: .gitignore  README.md  export_cursor_chats.py  pyproject.toml
cursor_chat_export/: __main__.py  cli.py  db.py  formatting.py
src/cursor_chat_export/: __init__.py  extract.py  formatting.py
systemd/: cursor-chat-export.service  cursor-chat-export.timer
