[project]
name = "cursor-chat-export"
version = "0.1.0"
description = "Export Cursor IDE chat transcripts to markdown files"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
cursor-chat-export = "cursor_chat_export.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
